app/assets/stylesheets/images.css.scss
// =============================
//  Classes for image alignment
// =============================

@import "_colors";

.block {
  position: absolute;
  //width: 300px;
  height: auto;
}

/*@media only screen and (max-width: 500px) {
  .block {
    width: 55%;
  }

  .desc-box {
    width: 95% !important;
  }
}*/
@media only screen and (min-width: 500px) {
  .block {
    width: 300px;
  }
  .desc-box {
    width: 300px;
  }
}

#loader {
  position: absolute;
  text-align: center;
  z-index: 10;
  height: auto;
}


// Classes used at 'View all images' page (for debugging)
// from: http://goo.gl/zsi5mT
ul.boxline {
    padding-left: 0!important;
    text-align: left;
    margin: 0 0 15px;
}

ul.boxline li {
    width: 76px;
    display: inline-block;
    vertical-align: top;
    white-space: normal;
    word-wrap: normal;
    font-size: 12px;
    line-height: 1.2;
    margin: 0;
    padding: 2px;
}

ul.boxline li img {
    display: block!important;
    border: 1px solid #d0a600!important;
    //height: 55px!important;
    //width: 72px!important;
    height: 200px!important;
    width: 200px!important;
    margin: 2px!important;
    padding: 2px!important;
}




// Classes used at 'User's home' page
// from: http://www.dwuser.com/education/content/creating-responsive-tiled-layout-with-pure-css/
body {
   margin: 0;
   padding: 0;
}
.block .titleBox {
   position: absolute;
   visibility: hidden;
   top: 0px;
   left: 0px;
   right: 0px;

   margin-bottom: 0px;
   color: #FFF;
   padding: 10px;
}
.title {
  //width: 300px;
  line-height: 1.2;
  font-size: 14px;
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin-bottom: 0px;
  background: rgba($base-dark, 0.5);
  color: #FFF;
  padding: 5px 7px;
}
body.no-touch .block:hover .titleBox, body.touch .block.touchFocus .titleBox {
   margin-bottom: 0;
   color: #FFF;
   visibility: visible;
}
body.no-touch .block.hovered .titleBox, body.touch .block.touchFocus .titleBox {
   margin-bottom: 0;
   color: #FFF;
   visibility: visible;
}

